--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "expect": "^1.20.2",
+    "jsdom": "8.5.0",
+    "mocha": "^3.3.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "my-test": "mocha --reporter list testSetup.js \"src/test/*.spec.js\"",
+    "eject": "react-scripts eject",
+    "myTest": ""
   }
 }
